# nabto5-beta1-release

./: README.md
nabto-client-sdk/: README.md
nabto-client-sdk/android-demo/: README.md
nabto-client-sdk/android/demo/: settings.gradle
nabto-client-sdk/android/demo/app/: build.gradle
nabto-client-sdk/android/demo/app/src/main/: AndroidManifest.xml
nabto-client-sdk/android/demo/gradle/wrapper/: gradle-wrapper.properties
nabto-client-sdk/android/demo/jni-debug/: build.gradle
nabto-client-sdk/cli-demo/: README.md
nabto-client-sdk/cli-demo/include/nabto/: nabto_client.h
nabto-client-sdk/cli-demo/lib/: libnabto_client.dylib
nabto-client-sdk/cli-demo/src/: CMakeLists.txt  nabto_client_ptr.hpp  test_client.cpp
nabto-client-sdk/include/nabto/: nabto_client.h  nabto_client_experimental.h
nabto-client-sdk/ios-demo/: README.md
nabto-client-sdk/ios-demo/Nabto5 iOS Demo/: MasterViewController.mm
nabto-client-sdk/ios-demo/Nabto5 iOS Demo.xcodeproj/: project.pbxproj
nabto-client-sdk/ios/lib/: README.md
nabto-client-sdk/lib/: README.md
nabto-client-sdk/macos/demo/: README.md
nabto-client-sdk/macos/lib/: README.md
nabto-client-sdk/src/: test_client.cpp
nabto-embedded-sdk/: README.md
nabto-embedded-sdk/common/include/: README.md
nabto-embedded-sdk/lib/: libnabto_device.dylib
nabto-embedded-sdk/linux/demo/: README.md
nabto-embedded-sdk/linux/lib/: README.md
nabto-embedded-sdk/mac/demo/: README.md
nabto-embedded-sdk/mac/lib/: README.md
nabto-embedded-sdk/src/: CMakeLists.txt
(+6 files in other folders)
